# gs-interview

./: .env.template  .gitignore  .pre-commit-config.yaml  README.md  index.html  package-lock.json  package.json  pyproject.toml  vite.config.js
backend/main/: config.py  database.py  main.py  sql_models.py
frontend/src/: App.jsx  index.jsx
frontend/src/components/: DataTable.jsx  Home.jsx
frontend/src/hooks/: useData.jsx  useTables.jsx
