[tool.poetry]
name = "gs-demo"
version = "1.2.0"
description = "grid status full stack demo repo"
authors = ["Max Kanter <kmax12@gmail.com>"]
license = "proprietary"
readme = "README.md"
packages = [{include = "gs_demo"}]

[tool.poetry.dependencies]
async-lru = "^2.0.4"
python = "^3.10"
aioodbc = "0.5.0"
fastapi = "^0.104.1"
sqlalchemy = "2.0.28"
asyncpg = "0.29.0"
pydantic = "^2.4.2"
uvicorn = "^0.23.2"
greenlet = "1.1.3"
requests = "^2.28.2"
pandas = "^1.5.3"
pendulum = "^2.1.2"
alembic = "^1.10.4"
svix = "^0.84.1"
pyjwt = {extras = ["crypto"], version = "^2.7.0"}
orjson = "^3.9.2"
pydantic-settings = "^2.0.3"


[tool.poetry.dev-dependencies]
absolufy-imports = "^0.3.1"
black = {extras = ["jupyter"], version = "^24.2.0"}
bandit = {extras = ["toml"], version = "^1.7.5"}
nest-asyncio = "^1.6.0"
safety = "^2.3.5"
pre-commit = "^3.6.2"
ruff = {extras = ["jupyter"], version = "^0.3.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = []
isort.known-first-party = ["gs_demo"]
select = ["F", "E", "W", "Q", "I001"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402", "F403", "F405", "E501", "I001"]

[tool.bandit]
exclude_dirs = []
skips = ["B101", "B110", "B113"]
